# drf_rocshers_test_assignment

./: .coveragerc  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  Makefile.in.mk  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
config/: .secrets.yaml  settings.yaml
scripts/: get_db_host.py  get_db_port.py  gunicorn.conf.py  utils.py  wait_for_postgresql.sh
src/: db.sqlite3
src/applications/api/: admin.py  models.py  schema_extenders.py  serializers.py  urls.py  views.py
src/applications/api/migrations/: 0001_initial.py  0002_pointer_user.py
src/applications/api/tests/: conftest.py  test_models.py  test_views.py
src/applications/user/: models.py  permissions.py  serializers.py  urls.py  views.py
src/applications/user/migrations/: 0001_initial.py
src/project/: settings.py  urls.py
